--- a/package.json
+++ b/package.json
@@ -12,14 +12,26 @@
   "author": "nkvch",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.1",
+    "apollo-server": "^3.10.1",
     "dotenv": "^16.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "graphql": "^16.6.0",
+    "graphql-constraint-directive": "^3.1.1",
+    "graphql-tag": "^2.12.6",
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "concurrently": "^7.3.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
 }
