--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An app to create events",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
@@ -25,14 +25,20 @@
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "babel-jest": "^28.1.3",
     "concurrently": "^7.3.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
